--- a/BRenderLib/BRenderLib.vcxproj.filters
+++ b/BRenderLib/BRenderLib.vcxproj.filters
@@ -1,84 +1,93 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Src">
       <UniqueIdentifier>{c86fd1ee-cd6d-499f-a414-13949700eaa1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Objects">
+      <UniqueIdentifier>{fac73930-17fe-4d30-af8a-872e89021f6d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Serialization">
+      <UniqueIdentifier>{6256d053-8751-463d-8432-c0963639eba6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Palette.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Common.h">
       <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="Pixmap.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Exception.h">
+      <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="Chunk.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="BigEndianStreamReader.h">
+      <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="Actor.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Objects\Actor.h">
+      <Filter>Src\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="Model.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Objects\Material.h">
+      <Filter>Src\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="Shadetab.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Objects\Model.h">
+      <Filter>Src\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="Material.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Objects\Palette.h">
+      <Filter>Src\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Objects\Pixmap.h">
+      <Filter>Src\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="ObjectFactory.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Objects\Shadetab.h">
+      <Filter>Src\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Serialization\TextureSerializer.h">
+      <Filter>Src\Serialization</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\ChunkHeader.h">
+      <Filter>Src\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Serialization\PaletteSerializer.h">
+      <Filter>Src\Serialization</Filter>
+    </ClInclude>
+    <ClInclude Include="Serialization\ModelSerializer.h">
+      <Filter>Src\Serialization</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Palette.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="BigEndianStreamReader.cpp">
+      <Filter>Src</Filter>
     </ClCompile>
-    <ClCompile Include="Pixmap.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\Actor.cpp">
+      <Filter>Src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Chunk.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\Material.cpp">
+      <Filter>Src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Actor.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\Model.cpp">
+      <Filter>Src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Model.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\Palette.cpp">
+      <Filter>Src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Shadetab.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\Pixmap.cpp">
+      <Filter>Src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Material.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\Shadetab.cpp">
+      <Filter>Src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Object.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Serialization\TextureSerializer.cpp">
+      <Filter>Src\Serialization</Filter>
     </ClCompile>
-    <ClCompile Include="ObjectFactory.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Objects\ChunkHeader.cpp">
+      <Filter>Src\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Serialization\PaletteSerializer.cpp">
+      <Filter>Src\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="Serialization\ModelSerializer.cpp">
+      <Filter>Src\Serialization</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
