--- a/OpenCarma/OpenCarma.vcxproj
+++ b/OpenCarma/OpenCarma.vcxproj
@@ -88,6 +88,8 @@
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Render.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Common\TextDecoder.h" />
@@ -95,6 +97,8 @@
     <ClInclude Include="Init.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Render.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
