--- a/BRenderLib/BRenderLib.vcxproj.filters
+++ b/BRenderLib/BRenderLib.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClInclude Include="Serialization\MaterialSerializer.h">
       <Filter>Src\Serialization</Filter>
     </ClInclude>
+    <ClInclude Include="Serialization\ActorSerializer.h">
+      <Filter>Src\Serialization</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BigEndianStreamReader.cpp">
@@ -95,6 +98,9 @@
     </ClCompile>
     <ClCompile Include="EndianConverter.cpp" />
     <ClCompile Include="Serialization\MaterialSerializer.cpp">
+      <Filter>Src\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="Serialization\ActorSerializer.cpp">
       <Filter>Src\Serialization</Filter>
     </ClCompile>
   </ItemGroup>
