--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,5 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required(VERSION 2.6)
 project (OpenCarma)
-
-# Sources
-set(BITLINKER_COMMONS_SOURCES
-    BitlinkerCommons/Common/EndianUtils.cpp
-    BitlinkerCommons/Common/StringUtils.cpp
-    BitlinkerCommons/Common/StringUtils.h
-    
-    #Logger
-    BitlinkerCommons/Logger/Log.h
-    BitlinkerCommons/Logger/Log.cpp
-    
-    #Render
-    BitlinkerCommons/Render/BufferObject.h
-    BitlinkerCommons/Render/Camera.h
-    BitlinkerCommons/Render/Camera.cpp
-    BitlinkerCommons/Render/IBindable.h    
-    BitlinkerCommons/Render/RenderCommon.h
-    BitlinkerCommons/Render/GLContext.h
-    BitlinkerCommons/Render/GLContext.cpp
-    BitlinkerCommons/Render/ScopeBind.h
-    BitlinkerCommons/Render/Shader.h
-    BitlinkerCommons/Render/Shader.cpp
-    BitlinkerCommons/Render/ShaderProgram.h
-    BitlinkerCommons/Render/ShaderProgram.cpp
-    BitlinkerCommons/Render/Texture.h
-    BitlinkerCommons/Render/Texture.cpp
-    BitlinkerCommons/Render/VertexArrayObject.h
-    BitlinkerCommons/Render/RenderWindow.h
-    BitlinkerCommons/Render/RenderWindow.cpp
-    BitlinkerCommons/Render/RenderNode.h
-    BitlinkerCommons/Render/RenderNode.cpp
-    BitlinkerCommons/Render/Frustum.h
-    BitlinkerCommons/Render/Frustum.cpp
-    
-    #Streams
-    BitlinkerCommons/Streams/FileStream.h
-    BitlinkerCommons/Streams/FileStream.cpp
-    BitlinkerCommons/Streams/MemoryStream.h
-    BitlinkerCommons/Streams/MemoryStream.cpp
-)
 
 set(COMMON_SOURCES
     Common/TextDecoder.cpp
@@ -49,10 +9,8 @@ set(OPENCARMA_SOURCES
     OpenCarma/Render/AxisDrawable.cpp
     OpenCarma/Render/CarmaTextureLoader.cpp
     OpenCarma/Render/FreeFlyCameraController.cpp
-    OpenCarma/Render/Render.cpp
     OpenCarma/Render/RenderMaterial.cpp
     OpenCarma/Render/StaticModel.cpp
-    OpenCarma/Render/TextureManager.cpp
     OpenCarma/Render/PlainShaderProgram.h
     OpenCarma/Render/PlainShaderProgram.cpp
     
@@ -70,7 +28,7 @@ set(OPENCARMA_SOURCES
 )
 
 set(BRENDER_SOURCES
-    BRenderLib/BigEndianStreamReader.cpp
+        BRenderLib/EndianStreamReader.cpp
     BRenderLib/Serialization/ActorSerializer.cpp
     BRenderLib/Serialization/MaterialSerializer.cpp
     BRenderLib/Serialization/ModelSerializer.cpp
@@ -101,10 +59,13 @@ SOURCE_GROUP("Common" FILES ${COMMON_SOURCES})
 SOURCE_GROUP("OpenCarma" FILES ${OPENCARMA_SOURCES})
 SOURCE_GROUP("BRender" FILES ${BRENDER_SOURCES})
 
-
 # Platform-specific configs:
-ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
+# Windows
+#ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
 
+#MinGW
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -stdlib=libc++ -std=c99 -DGLEW_STATIC")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -std=gnu++11 -DGLEW_STATIC")
 
 # External libs:
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")
@@ -115,10 +76,14 @@ FIND_PACKAGE (GLM REQUIRED)
 
 INCLUDE_DIRECTORIES (${GLFW3_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${GLM_INCLUDE_DIR})
 
+add_subdirectory("BitlinkerCommons")
+add_subdirectory("BRenderLib")
+add_subdirectory("TextDecoder")
+
+#add_subdirectory("BRenderTest")
+
 # Link
 add_executable(OpenCarma ${COMMON_SOURCES} ${BITLINKER_COMMONS_SOURCES} ${OPENCARMA_SOURCES} ${BRENDER_SOURCES})
-target_link_libraries(OpenCarma opengl32.lib ${GLFW3_LIBRARY} ${GLEW_LIBRARY})
-
-add_subdirectory("TextDecoder")
+target_link_libraries(OpenCarma ${GLFW3_LIBRARY} ${GLEW_LIBRARY} opengl32.lib)
 
 #install(TARGETS opencarma DESTINATION /usr/lib) #TODO
