--- a/TextDecoder/CMakeLists.txt
+++ b/TextDecoder/CMakeLists.txt
@@ -1,16 +1,18 @@
-cmake_minimum_required (VERSION 2.6)
-project (TextDecoder)
+cmake_minimum_required(VERSION 2.6)
+project(TextDecoder)
 
 set(TEXTDECODER_SOURCES
-    ../Common/TextDecoder.cpp
-	main.cpp
-)
+        ../Common/TextDecoder.h
+        ../Common/TextDecoder.cpp
+        main.cpp
+        )
 
 set(TEXTDECODER_INCLUDE_DIRS
-    ../Common
-)
+        ../Common
+        )
 
 INCLUDE_DIRECTORIES(${TEXTDECODER_INCLUDE_DIRS})
 
 # Link
 add_executable(TextDecoder ${TEXTDECODER_SOURCES})
+target_link_libraries(TextDecoder BitlinkerCommons)
