--- a/BRenderLib/BRenderLib.vcxproj.filters
+++ b/BRenderLib/BRenderLib.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Serialization\ModelSerializer.cpp">
       <Filter>Serialziation</Filter>
     </ClCompile>
-    <ClCompile Include="Serialization\TextureSerializer.cpp">
-      <Filter>Serialziation</Filter>
-    </ClCompile>
     <ClCompile Include="Objects\Actor.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
@@ -36,6 +33,12 @@
     <ClCompile Include="Objects\Pixmap.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Serialization\PixmapSerializer.cpp">
+      <Filter>Serialziation</Filter>
+    </ClCompile>
+    <ClCompile Include="Serialization\ChunkReader.cpp">
+      <Filter>Serialziation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Serialization\ActorSerializer.h">
@@ -45,9 +48,6 @@
       <Filter>Serialziation</Filter>
     </ClInclude>
     <ClInclude Include="Serialization\ModelSerializer.h">
-      <Filter>Serialziation</Filter>
-    </ClInclude>
-    <ClInclude Include="Serialization\TextureSerializer.h">
       <Filter>Serialziation</Filter>
     </ClInclude>
     <ClInclude Include="Objects\Actor.h">
@@ -66,5 +66,11 @@
       <Filter>Objects</Filter>
     </ClInclude>
     <ClInclude Include="Common.h" />
+    <ClInclude Include="Serialization\PixmapSerializer.h">
+      <Filter>Serialziation</Filter>
+    </ClInclude>
+    <ClInclude Include="Serialization\ChunkReader.h">
+      <Filter>Serialziation</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
