--- a/OpenCarma/OpenCarma.vcxproj.filters
+++ b/OpenCarma/OpenCarma.vcxproj.filters
@@ -107,5 +107,8 @@
       <Filter>Render</Filter>
     </ClInclude>
     <ClInclude Include="Filesystem.h" />
+    <ClInclude Include="Render\ResourceMgr.h">
+      <Filter>Render</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
